--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,11 @@
+#navbar {
+  position: fixed;
+  top: 0;
+  height: 50px;
+}
+
 #landing {
+  margin-top: 50px;
   background: url(../assets/bg1.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
