--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #234A4C;
+}
 #side-nav-logo {
   width: 100%;
 }
@@ -17,6 +20,13 @@
 #landing {
   height: 75vh;
 }
+#intro {
+  width: 100%;
+}
+
+
+
+
 #vid {
   background: url(../assets/bg2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -25,6 +35,11 @@
   background-size: cover;
   height: 100vh;
 }
+.card {
+  width: 33%;
+  align-self: center;
+}
 .card-content {
   background-color: #45270D;
+  text-align: center;
 }
