--- a/css/index.css
+++ b/css/index.css
@@ -23,21 +23,16 @@ body {
 #intro {
   width: 100%;
 }
-
-
-
-
 #vid {
   background: url(../assets/bg2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 100vh;
 }
-.card {
+#logo-card {
   width: 33%;
-  margin: 50%;
+  margin: 1% auto;
 }
 .card-content {
   background-color: #45270D;
