--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ body {
   height: 75vh;
 }
 #news {
-  background: url(../assets/bg1.jpg) no-repeat center center fixed;
+  background: url(../assets/bg1.jpg) no-repeat center 10vh fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -39,6 +39,7 @@ body {
 .card-content {
   background-color: #45270D;
   text-align: center;
+  font-size: 1vw;
 }
 #video-row {
   width: 99%;
