--- a/css/index.css
+++ b/css/index.css
@@ -21,12 +21,11 @@ body {
 #mobile > ul > li > a {
   color: white;
 }
+#landing {
+  height: 100vh;
+}
 #logo-img-bck {
   width: 100%;
-}
-#intro {
-  width: 100%;
-  height: 75vh;
 }
 #news {
   background: url(../assets/bg1.jpg) no-repeat center 10vh fixed;
@@ -44,9 +43,16 @@ body {
   background-color: #45270D;
   font-size: 1vw;
 }
-#video-row {
-  width: 99%;
-  margin: 10% auto;
+#intro {
+  width: 100%;
+  height 100vh;
+  padding 1%;
+  background: url(../assets/bg3.jpg) no-repeat center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
 #news-card {
   width: 70%;
