--- a/css/index.css
+++ b/css/index.css
@@ -45,8 +45,8 @@ body {
 }
 #intro {
   width: 100%;
-  height 100vh;
-  padding 1%;
+  height: 100vh;
+  padding: 1%;
   background: url(../assets/bg3.jpg) no-repeat center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
