--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ body {
 }
 #landing {
   height: 100vh;
+  background: url(../assets/img2.jpg) no-repeat center 30% fixed;
 }
 #logo-img-bck {
   width: 100%;
@@ -45,7 +46,7 @@ body {
 }
 #intro {
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   padding: 1%;
   background: url(../assets/bg3.jpg) no-repeat center;
   -webkit-background-size: cover;
