--- a/css/index.css
+++ b/css/index.css
@@ -25,25 +25,6 @@ body {
   height: 100vh;
   background: url(../assets/img2.jpg) no-repeat center 30% fixed;
 }
-#logo-img-bck {
-  width: 100%;
-}
-#news {
-  background: url(../assets/bg1.jpg) no-repeat center 10vh fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 100vh;
-}
-#logo-card {
-  width: 60%;
-  margin: 1% auto;
-}
-.card-content {
-  background-color: #45270D;
-  font-size: 1vw;
-}
 #intro {
   width: 100%;
   height: 70vh;
@@ -53,7 +34,23 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
+  margin: 0;
+}
+#logo-card {
+  width: 60%;
+  margin: 1% auto;
+}
+.card-content {
+  background-color: #45270D;
+  font-size: 1vw;
+}
+#news {
+  background: url(../assets/bg1.jpg) no-repeat center 10vh fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
 }
 #news-card {
   width: 70%;
