--- a/css/index.css
+++ b/css/index.css
@@ -70,8 +70,9 @@ body {
   margin: 5% auto;
   background-color: #45270D;
   color: white;
+  font-size: 1.7vw;
 }
 #fb-img {
-  width: 50px;
+  width: 5vw;
   margin: 0 auto;
 }
