--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,7 @@ body {
   margin: 5% auto;
   background-color: #45270D;
   color: white;
-  font-size: 1.7vw;
+  font-size: 1.7}vw;
 }
 #fb-img {
   width: 5vw;
